force-app/main/default/objects/Delivery_Project__c/Delivery_Project__c.object-meta.xml
<CustomObject>
    <label>Delivery Project</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>