force-app/main/default/objects/Delivery_Project__c/fields/BuildingProject__c.field-meta.xml
<CustomField>
    <fullName>BuildingProject__c</fullName>
    <description>The Main Project</description>
    <label>Building Project</label>
    <referenceTo>Building_Project__c</referenceTo>
    <relationshipLabel>Delivery Projects</relationshipLabel>
    <relationshipName>LumonDeliveryProjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>