force-app/main/default/objects/Delivery_Project__c/fields/CustomerAddress__c.field-meta.xml
<CustomField>
    <fullName>CustomerAddress__c</fullName>
    <label>Customer Address</label>
    <type>Address</type>
</CustomField>