force-app/main/default/objects/Delivery_Project__c/fields/InstallationAddress__c.field-meta.xml
<CustomField>
    <fullName>InstallationAddress__c</fullName>
    <description>The Address where the Balcony or Terrace Glazing is Installed</description>
    <inlineHelpText>The Address where the Balcony or Terrace Glazing is Installed</inlineHelpText>
    <label>Installation Address</label>
    <type>Address</type>
</CustomField>