force-app/main/default/objects/Delivery_Project__c/fields/InvoicingAddress__c.field-meta.xml
<CustomField>
    <fullName>InvoicingAddress__c</fullName>
    <description>The Address where the Invoice is Send</description>
    <inlineHelpText>The Address where the Invoice is Send</inlineHelpText>
    <label>Invoicing Address</label>
    <type>Address</type>
</CustomField>