force-app/main/default/objects/Delivery_Project__c/fields/isChargeable__c.field-meta.xml
<CustomField>
    <fullName>isChargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isChargeable</label>
    <type>Checkbox</type>
</CustomField>