force-app/main/default/objects/Delivery_Project__c/fields/isOpen__c.field-meta.xml
<CustomField>
    <fullName>isOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOpen</label>
    <type>Checkbox</type>
</CustomField>