force-app/main/default/objects/Delivery_Project__c/fields/PlannedStartDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedStartDate__c</fullName>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>