force-app/main/default/objects/Delivery_Project__c/fields/ProjectCategory__c.field-meta.xml
<CustomField>
    <fullName>ProjectCategory__c</fullName>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Project_Categories</valueSetName>
    </valueSet>
</CustomField>