force-app/main/default/objects/Delivery_Project__c/fields/ProjectCost__c.field-meta.xml
<CustomField>
    <fullName>ProjectCost__c</fullName>
    <label>Project Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>