force-app/main/default/objects/Delivery_Project__c/fields/ProjectGroup__c.field-meta.xml
<CustomField>
    <fullName>ProjectGroup__c</fullName>
    <label>Project Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Project_Groups</valueSetName>
    </valueSet>
</CustomField>