force-app/main/default/objects/Delivery_Project__c/fields/ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectNumber__c</fullName>
    <description>Unique Main Project Number</description>
    <inlineHelpText>Project Number Reference</inlineHelpText>
    <label>Project Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>