force-app/main/default/objects/Delivery_Project__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Project_Types</valueSetName>
    </valueSet>
</CustomField>