force-app/main/default/objects/Delivery_Project__c/fields/SubProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>SubProjectNumber__c</fullName>
    <description>Unique Project Number</description>
    <externalId>true</externalId>
    <inlineHelpText>SubProject Number Reference</inlineHelpText>
    <label>SubProject Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>