force-app/main/default/objects/Delivery_Project__c/fields/underWarranty__c.field-meta.xml
<CustomField>
    <fullName>underWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>underWarranty</label>
    <type>Checkbox</type>
</CustomField>